Navbar bug fixed. Hero title has been made  more visible.

--- a/frontend/src/components/HeroSection.css
+++ b/frontend/src/components/HeroSection.css
@@ -7,7 +7,7 @@
   } */
 
 .hero-container {
-  background: url('https://i.imgur.com/dqNza5j.jpg') no-repeat center center;
+  background: url('https://i.imgur.com/A0XZVAL.jpg') no-repeat center center;
   background-size: cover;
   height: 60vh;
   width: 100%;
@@ -24,8 +24,9 @@
 
 .hero-title {
   text-align: center;
-  color: white;
+  color: var(--white);
   font-weight: bolder;
+  text-shadow: 4px 4px 4px var(--black);
 }
 
 .hero-cite {
@@ -35,4 +36,5 @@
   font-weight: bold;
   font-style: italic;
   color: var(--hero-cite);
+  text-shadow: 4px 4px 4px var(--black);
 }
